--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   line-height: 1.6em;
   font-weight: 300;
   color: #555;
-  background-color: #FFE77A;
+ 
 }
 
 p {
@@ -31,7 +31,7 @@ header {
 }
 
 .pageTitle {
-  color: #FF7600;
+  color: #2C5F2D;
 }
 
 .pageTitle {
@@ -63,7 +63,8 @@ header {
   width: 520px;
   padding: 40px;
   margin: 20px auto;
-  background: #fff;
+  background: #FFE77A;
+  /* background: #fff; */
   box-shadow:  0px 3px 3px 1px rgba(0, 0, 0, 0.25);
 }
 
